# AutoTrackRaymarine_pi

./: CMakeLists - Copy.txt  CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  autotrack_info.fbp  autotrack_prefs.fbp  bld.bat  build_flatpak.cmake  change_submodule_branch.sh  checksum.cmake  compile.bat  copy_out  finish_tarball.cmake  org.opencpn.OpenCPN.Plugin.radar.yaml  testn2k.txt  wxWidgets-3.2.1-headers.7z
.circleci/: BOOTCAMP (C) - Shortcut.lnk  config-Remove-O5.6.2.yml  config.yml
OLD/: fe2xcopy.bat
OLD/src/nmea0183/: apb.cpp  xte.cpp
backup_sources/include/: AutoTrackRaymarine_pi.h  SerialPort.h
backup_sources/src/: AutoTrackRaymarine_pi.cpp  CMakeCache.txt  Info.cpp
cache/: wx-config.bat
cache/wxWidgets-3.1.2/lib/vc_dll/: wxbase31u.lib  wxbase31u_net.lib  wxbase31u_xml.lib  wxexpat.lib  wxjpeg.lib  wxmsw31u_adv.lib  wxmsw31u_aui.lib  wxmsw31u_gl.lib  wxmsw31u_html.lib  wxmsw31u_media.lib  wxmsw31u_propgrid.lib  wxmsw31u_qa.lib  wxmsw31u_ribbon.lib  wxmsw31u_richtext.lib  wxmsw31u_stc.lib  wxmsw31u_webview.lib  wxmsw31u_xrc.lib  wxpng.lib  wxregexu.lib  wxtiff.lib  wxzlib.lib
cache/wxWidgets-3.2.1/lib/vc14x_dll/: wxbase32u.lib  wxbase32u_net.lib  wxbase32u_xml.lib  wxbase32ud.lib  wxbase32ud_net.lib  wxbase32ud_xml.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxjpegd.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_gl.lib  wxmsw32u_html.lib  wxmsw32u_media.lib  wxmsw32u_propgrid.lib  wxmsw32u_qa.lib  wxmsw32u_ribbon.lib  wxmsw32u_richtext.lib  wxmsw32u_stc.lib  wxmsw32u_webview.lib  wxmsw32u_xrc.lib  wxmsw32ud_adv.lib  wxmsw32ud_aui.lib  wxmsw32ud_gl.lib  wxmsw32ud_html.lib  wxmsw32ud_media.lib  wxmsw32ud_propgrid.lib  wxmsw32ud_qa.lib  wxmsw32ud_ribbon.lib  wxmsw32ud_richtext.lib  wxmsw32ud_stc.lib  wxmsw32ud_webview.lib  wxmsw32ud_xrc.lib  wxpng.lib  wxpngd.lib  wxregexu.lib  wxregexud.lib  wxtiff.lib  wxtiffd.lib  (+2 more)
cmake/: PluginSetup.cmake
include/: AutoTrackRaymarine_pi.h  Info.h  PreferencesDialog.h  actisense.h  msvcdefs.h  wxWTranslateCatalog.h
libs/ocpn-api/: NEW-short-ocpn_plugin.h  ocpn_plugin.h.bak  original-api117-updated-ocpn_plugin.h.docx  original-api117-updated-ocpn_plugin.h.docx.bak
libs/ocpn-api/msvc/: opencpn.lib
manual/: antora.yml  site.yml
manual/autotrackrm-ev/: site.yml
manual/autotrackrm-ev/modules/ROOT/pages/: autotrackraymarine.adoc
manual/modules/ROOT/pages/: autotrackraymarine.adoc  index.adoc
po/: AutoTrackRaymarine_pi.pot  POTFILES.in  POTFILES.in.test  es_ES.po  fr_FR.po  it_IT.po
po/src/: AutoTrackRaymarine_pi.cpp  AutotrackPrefsUI.h  SerialPort.h
src/: AutoTrackRaymarineUI.cpp  AutoTrackRaymarineUI.h  AutoTrackRaymarine_pi.cpp  AutoTrackRaymarine_pi.cpp.bak  AutoTrackRaymarine_pi.fbp  AutoTrackRaymarine_pi.h  AutopilotRouteUI.cpp  AutopilotRouteUI.h  AutotrackInfoUI.cpp  AutotrackInfoUI.h  AutotrackPrefsUI.cpp  AutotrackPrefsUI.h  Info.cpp  Info.h  NGT1Read.cpp  NGT1Read.h  PreferencesDialog.cpp  PreferencesDialog.h  SerialPort.cpp  SerialPort.h  VERSION.cmake  actisense.h  apdc.cpp  apdc.h  concanv.cpp  concanv.h  icons.cpp  icons.h  ocpn_plugin.h  version.h
src/OLD/: AutotrackInfoUI.h  OLD-ODAPI.h
src/OLD/nmea0183/: response.cpp  sentence.cpp
src/nmea0183/: xte.cpp
src/tinyxml/: tinyxml.cpp
